Time: 8 ms (86.60%) | Memory: 46.2 MB (98.48%) - LeetSync